--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px;
+  background: black;
+  color: teal;
 }
 
 .App-logo {
